--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             color: #121212;
         }
         
-        a::before{
-            content: '# ';
+        a::after{
+            content: ' #';
             opacity: 0;
         }
         
@@ -76,7 +76,7 @@
             text-decoration: underline;
             color: #551a93;
         }
-        li:hover>a::before{
+        li:hover>a::after{
             opacity: 1;
         }
     </style>
@@ -96,6 +96,7 @@
                 </li>
                 <li><a href="Exemplos de html canvas/4 - Desenhando textos.html" target="_blank">Desenhando textos</a></li>
                 <li><a href="Exemplos de html canvas/5 - Usando imagens.html" target="_blank">Usando imagens</a></li>
+                <li><a href="Exemplos de html canvas/6 - Transformações.html" target="_blank">Transformações</a></li>
             </ol>
         </nav>
     </main>
