--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <li><a href="Exemplos de html canvas/4 - Desenhando textos.html" target="_blank">Desenhando textos</a></li>
                 <li><a href="Exemplos de html canvas/5 - Usando imagens.html" target="_blank">Usando imagens</a></li>
                 <li><a href="Exemplos de html canvas/6 - Transformações.html" target="_blank">Transformações</a></li>
+                <li><a href="Exemplos de html canvas/7 - Traçados de recorte.html" target="_blank">Traçados de recorte</a></li>
             </ol>
         </nav>
     </main>
