--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -37,47 +38,67 @@
             align-items: center;
             border-radius: 10px;
             background-color: #ccc;
-            box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+            box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
         }
 
-        h1{
+        h1 {
             padding-bottom: 20px;
             color: #121212;
         }
 
-        li{
+        li {
             padding: 10px;
             margin-bottom: 8px;
             background-color: rgb(209, 209, 209);
             /* box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5); */
             border-radius: 10px;
         }
-        a{
+
+        a {
             text-decoration: none;
         }
-        a:visited,a:link{
+
+        a:visited,
+        a:link {
             color: #121212;
         }
-        
-        a::after{
-            content: ' #';
+
+        a::after {
             opacity: 0;
         }
-        
-        li:hover{
-            box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5);
+
+        span {
+            opacity: 0;
+            margin-left: 8px;
+            font-size: 20px;
         }
-        li:hover>a{
+
+        li {
+            list-style: none;
+        }
+
+        li:hover {
+            box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
+        }
+
+        li:hover>a {
             text-decoration: underline;
             color: blue;
             font-weight: bold;
         }
-        li:hover>a:visited{
+
+        li:hover>a:visited {
             text-decoration: underline;
             color: #551a93;
         }
-        li:hover>a::after{
+
+        li:hover>a::after {
             opacity: 1;
+        }
+
+        li:hover>span {
+            opacity: 1;
+            text-decoration: none;
         }
     </style>
     <title>Estudos com html canvas</title>
@@ -88,16 +109,55 @@
         <h1>Exemplos de html canvas</h1>
         <nav>
             <ol>
-                <li><a href="Exemplos de html canvas/1 - Utilização básica do Canvas.html" target="_blank">Utilização básica do
-                        Canvas</a></li>
-                <li><a href="Exemplos de html canvas/2 - Desenhando formas com canvas.html" target="_blank">Desenhando formas com
-                        canvas</a></li>
-                <li><a href="Exemplos de html canvas/3 - Aplicando estilos e cores.html" target="_blank">Aplicando estilos e cores</a>
+                <li>
+                    <a href="Exemplos de html canvas/1 - Utilização básica do Canvas.html" target="_blank">
+                        Utilização básica do Canvas
+                    </a>
+                    <span>&#128279;</span>
                 </li>
-                <li><a href="Exemplos de html canvas/4 - Desenhando textos.html" target="_blank">Desenhando textos</a></li>
-                <li><a href="Exemplos de html canvas/5 - Usando imagens.html" target="_blank">Usando imagens</a></li>
-                <li><a href="Exemplos de html canvas/6 - Transformações.html" target="_blank">Transformações</a></li>
-                <li><a href="Exemplos de html canvas/7 - Traçados de recorte.html" target="_blank">Traçados de recorte</a></li>
+                <li>
+                    <a href="Exemplos de html canvas/2 - Desenhando formas com canvas.html" target="_blank">
+                        Desenhando formas com canvas
+                    </a>
+                    <span>&#128279;</span>
+                </li>
+                <li>
+                    <a href="Exemplos de html canvas/3 - Aplicando estilos e cores.html" target="_blank">
+                        Aplicando estilos e cores
+                    </a>
+                    <span>&#128279;</span>
+                </li>
+                <li>
+                    <a href="Exemplos de html canvas/4 - Desenhando textos.html" target="_blank">
+                        Desenhando textos
+                    </a>
+                    <span>&#128279;</span>
+                </li>
+                <li>
+                    <a href="Exemplos de html canvas/5 - Usando imagens.html" target="_blank">
+                        Usando imagens
+                    </a>
+                    <span>&#128279;</span>
+                </li>
+                <li>
+                    <a href="Exemplos de html canvas/6 - Transformações.html" target="_blank">
+                        Transformações
+                    </a>
+                    <span>&#128279;</span>
+                </li>
+                <li>
+                    <a href="Exemplos de html canvas/7 - Traçados de recorte.html" target="_blank">
+                        Traçados de recorte
+                    </a>
+                    <span>&#128279;</span>
+                </li>
+                <li>
+                    <a href="Exemplos de html canvas/8 - Animações básicas/1 - Um sistema solar animado.html"
+                        target="_self">
+                        Animações básicas
+                    </a>
+                    <span>&#128279;</span>
+                </li>
             </ol>
         </nav>
     </main>
