--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 
         body {
             width: 100vw;
-            /* height: 100vh; */
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             align-content: center;
-            background-color: #ddd;
+            /* background-color: #ddd; */
+            background-color: #121212;
             overflow-x: hidden;
-            padding-top: 30px;
+            /* padding-top: 30px; */
             /* margin-top: 10vh; */
         }
 
@@ -36,9 +37,19 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            background: rgba(204, 204, 204, 0.25);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(4px);
             border-radius: 10px;
-            background-color: #ccc;
-            box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+        }
+
+        canvas {
+            width: 100vw;
+            height: 100vh;
+            /* border: solid 1px red; */
+            position: absolute;
+            z-index: -1;
         }
 
         h1 {
@@ -49,9 +60,10 @@
         li {
             padding: 10px;
             margin-bottom: 8px;
-            background-color: rgb(209, 209, 209);
-            /* box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5); */
+            background: rgba(209, 209, 209, 0.25);
+            backdrop-filter: blur(4px);
             border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
         }
 
         a {
@@ -104,7 +116,8 @@
     <title>Estudos com html canvas</title>
 </head>
 
-<body>
+<body onload="desenha()">
+    <canvas id="tutorial"></canvas>
     <main>
         <h1>Exemplos de html canvas</h1>
         <nav>
@@ -161,6 +174,108 @@
             </ol>
         </nav>
     </main>
+
+    <script>
+        const BODY = document.querySelector('body')
+        let canvas = document.querySelector('#tutorial')
+        var ctx = canvas.getContext("2d");
+        canvas.width = innerWidth
+        canvas.height = innerHeight
+        let largura = ctx.canvas.width
+        let altura = ctx.canvas.height
+        let quantidade = 100
+        let gravidade = 2
+        let tamanhoX = 3
+        let tamanhoY = 3
+        let velRotação = 0.04
+        let quadrados = []
+
+        function Random(min, max) {
+            min = Math.ceil(min);
+            max = Math.floor(max);
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+
+        const gerar_cor = (opacidade = 1) => {
+            let r = Math.floor(Random(0, 255))
+            let g = Math.floor(Random(0, 255))
+            let b = Math.floor(Random(0, 255))
+
+            return `rgba(${r}, ${g}, ${b}, ${opacidade})`;
+        }
+
+        const gera_quadrados = () => {
+            for (let i = 0; i < quantidade; i++) {
+                var novo = {
+                    "x": Random(0, largura - tamanhoX),
+                    "y": Random(-altura, -tamanhoY),
+                    "tamanhoX": tamanhoX,
+                    "tamanhoY": tamanhoY,
+                    "cor": gerar_cor(Math.random() * (1 - 0.5) + 0.5),
+                    "peso": Math.random() * 2,
+                    "rotação": Math.random(),
+                    "velocidadeRotação": (Random(0, 1) % 2 == 0) ? velRotação : -velRotação
+                }
+                quadrados.push(novo)
+            }
+
+            const mediaPeso = (
+                quadrados.reduce(
+                    (acc, cur) => acc + cur.peso, 0
+                ) / quadrados.length) / 2
+            for (let i = 0; i < quadrados.length; i++) {
+                if (quadrados[i].peso > mediaPeso) {
+                    quadrados[i].tamanhoX += Random(0, 5)
+                    quadrados[i].tamanhoY += Random(0, 10)
+                }
+            }
+        }
+        gera_quadrados()
+
+        const atualiza_quadros = (i) => {
+            quadrados[i].y = quadrados[i].y + gravidade + quadrados[i].peso
+            quadrados[i].rotação += quadrados[i].velocidadeRotação
+
+            if (quadrados[i].y > altura - quadrados[i].tamanhoY) {
+                quadrados[i].y = 0
+                quadrados[i].x = Random(0, largura - quadrados[i].tamanhoX)
+            }
+        }
+
+        const girarQuadrados = (i) => {
+            let deslocamentoX = quadrados[i].x + (quadrados[i].tamanhoX / 2)
+            let deslocamentoY = quadrados[i].y + (quadrados[i].tamanhoY / 2)
+            ctx.translate(deslocamentoX, deslocamentoY)
+            ctx.rotate((Math.PI / 2) * quadrados[i].rotação)
+            ctx.translate(deslocamentoX * (-1), deslocamentoY * (-1))
+            quadrados[i].rotação = quadrados[i].rotação + quadrados[i].velocidadeRotação
+        }
+
+        const desenha = () => {
+            ctx.fillStyle = "#121212"
+            ctx.clearRect(0, 0, largura, altura)
+
+            for (let i = 0; i < quadrados.length; i++) {
+                ctx.save()
+                const {
+                    x,
+                    y,
+                    tamanhoX,
+                    tamanhoY,
+                    cor,
+                    peso,
+                    rotação
+                } = quadrados[i]
+                girarQuadrados(i)
+                ctx.fillStyle = cor
+                ctx.fillRect(x, y, tamanhoX, tamanhoY)
+                atualiza_quadros(i)
+                ctx.restore()
+            }
+
+            requestAnimationFrame(desenha)
+        }
+    </script>
 </body>
 
 </html>
